--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,10 @@
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": false,
-    "jsx": "react-jsx",
-    "types": [],
-    "baseUrl": "./src"
+    "jsx": "react-jsx"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
