--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "three-mesh-bvh": "^0.7.6"
   },
   "devDependencies": {
+    "@types/three": "^0.166.0",
     "typescript": "^5.5.4",
-    "vite": "^5.3.3",
-    "@types/three": "^0.166.0"
+    "vite": "^5.3.3"
   }
 }
