--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "low-poly-forest-lidar",
-  "version": "0.1.0",
-  "private": true,
+  "name": "terminus-reborn",
+  "version": "1.0.0",
+  "description": "Terminus - A narrative-driven 3D adventure with LiDAR scanning mechanics",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src --ext .ts,.tsx",
+    "test": "vitest"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^23.1.2",
+    "eventemitter3": "^5.0.1",
     "three": "^0.166.1",
     "three-mesh-bvh": "^0.7.6"
   },
   "devDependencies": {
     "@types/three": "^0.166.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
     "typescript": "^5.5.4",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "vitest": "^1.6.0"
   }
 }
